--- a/hie.yaml
+++ b/hie.yaml
@@ -12,5 +12,7 @@ cradle:
       component:  "app/SmallAD.hs"
     - path: "bench/diffupto-bench.hs"
       component: "smooth:bench:diffupto-bench"
-    - path: "bench/liftWeil.hs"
-      component: "smooth:bench:liftWeil-bench"
+    - path: "bench/liftWeil-speed.hs"
+      component: "smooth:bench:liftWeil-speed"
+    - path: "bench/liftWeil-heap.hs"
+      component: "smooth:bench:liftWeil-heap"
