--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -26,9 +26,10 @@ jobs:
         # A directory to store and save the cache
         path: ~/.cabal
         # An explicit key for restoring and saving the cache
-        key: ${{runner.os}}-${{github.ref}}-cabal-${{ hashFiles('stack.yaml.lock') }}
+        key: ${{runner.os}}-${{github.ref}}-cabal-${{ hashFiles('stack.yaml.lock') }}-${{ hashFiles('**/*.hs') }}
         # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
         restore-keys: |
+          ${{runner.os}}-${{github.ref}}-cabal-${{ hashFiles('stack.yaml.lock') }}
           ${{runner.os}}-master-cabal
 
     - name: Cache ~/.ghc
@@ -37,9 +38,10 @@ jobs:
         # A directory to store and save the cache
         path: ~/.ghc
         # An explicit key for restoring and saving the cache
-        key: ${{runner.os}}-${{github.ref}}-ghc-${{ hashFiles('stack.yaml.lock') }}
+        key: ${{runner.os}}-${{github.ref}}-ghc-${{ hashFiles('stack.yaml.lock') }}-${{ hashFiles('**/*.hs') }}
         # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
         restore-keys: |
+          ${{runner.os}}-${{github.ref}}-ghc-${{ hashFiles('stack.yaml.lock') }}
           ${{runner.os}}-master-ghc
 
     - name: Cache .stack-work
@@ -48,8 +50,9 @@ jobs:
         # A directory to store and save the cache
         path: .stack-work
         # An explicit key for restoring and saving the cache
-        key: ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}
+        key: ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}-${{ hashFiles('**/*.hs') }}
         restore-keys: |
+          ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}
           ${{runner.os}}-master-stack-work
 
     - name: Install Dependent Libraries
