--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -207,7 +207,7 @@ jobs:
         sudo apt-get update -y -qq
         sudo apt-get install -y -qq wget libgmp3-dev libgsl0-dev liblapack-dev llvm-7-dev
     - name: Run tests
-      run: stack --no-terminal build --test
+      run: stack --no-terminal build --test --bench --no-run-benchmarks
 
   bench:
     needs:
