I hate cache hit...

--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -15,9 +15,10 @@ jobs:
         # A directory to store and save the cache
         path: ~/.stack
         # An explicit key for restoring and saving the cache
-        key: ${{runner.os}}-${{github.ref}}-stack-global-${{ hashFiles('stack.yaml.lock') }}
+        key: ${{runner.os}}-${{github.ref}}-stack-global-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}
         # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
         restore-keys: |
+          ${{runner.os}}-${{github.ref}}-stack-global-${{ hashFiles('stack.yaml.lock') }}-
           ${{runner.os}}-master-stack-global-${{ hashFiles('stack.yaml.lock') }}
           ${{runner.os}}-master-stack-global-
 
@@ -27,9 +28,10 @@ jobs:
         # A directory to store and save the cache
         path: ~/.cabal
         # An explicit key for restoring and saving the cache
-        key: ${{runner.os}}-${{github.ref}}-cabal-${{ hashFiles('stack.yaml.lock') }}
+        key: ${{runner.os}}-${{github.ref}}-cabal-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}
         # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
         restore-keys: |
+          ${{runner.os}}-${{github.ref}}-cabal-${{ hashFiles('stack.yaml.lock') }}-
           ${{runner.os}}-${{github.ref}}-cabal-${{ hashFiles('stack.yaml.lock') }}
           ${{runner.os}}-master-cabal
 
@@ -51,9 +53,9 @@ jobs:
         # A directory to store and save the cache
         path: .stack-work
         # An explicit key for restoring and saving the cache
-        key: ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}
+        key: ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}
         restore-keys: |
-          ${{runner.os}}-master-stack-work-${{ hashFiles('stack.yaml.lock') }}
+          ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}-
           ${{runner.os}}-${{github.ref}}-stack-work-
           ${{runner.os}}-master-stack-work-
 
@@ -88,9 +90,10 @@ jobs:
         # A directory to store and save the cache
         path: ~/.stack
         # An explicit key for restoring and saving the cache
-        key: ${{runner.os}}-${{github.ref}}-stack-global-${{ hashFiles('stack.yaml.lock') }}
+        key: ${{runner.os}}-${{github.ref}}-stack-global-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}
         # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
         restore-keys: |
+          ${{runner.os}}-${{github.ref}}-stack-global-${{ hashFiles('stack.yaml.lock') }}-
           ${{runner.os}}-master-stack-global-${{ hashFiles('stack.yaml.lock') }}
           ${{runner.os}}-master-stack-global-
 
@@ -100,9 +103,10 @@ jobs:
         # A directory to store and save the cache
         path: ~/.cabal
         # An explicit key for restoring and saving the cache
-        key: ${{runner.os}}-${{github.ref}}-cabal-${{ hashFiles('stack.yaml.lock') }}
+        key: ${{runner.os}}-${{github.ref}}-cabal-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}
         # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
         restore-keys: |
+          ${{runner.os}}-${{github.ref}}-cabal-${{ hashFiles('stack.yaml.lock') }}-
           ${{runner.os}}-${{github.ref}}-cabal-${{ hashFiles('stack.yaml.lock') }}
           ${{runner.os}}-master-cabal
 
@@ -124,11 +128,12 @@ jobs:
         # A directory to store and save the cache
         path: .stack-work
         # An explicit key for restoring and saving the cache
-        key: ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}
+        key: ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}
         restore-keys: |
-          ${{runner.os}}-master-stack-work-${{ hashFiles('stack.yaml.lock') }}
+          ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}-
           ${{runner.os}}-${{github.ref}}-stack-work-
           ${{runner.os}}-master-stack-work-
+
 
     - name: Install Dependent Libraries
       run: |
@@ -160,9 +165,10 @@ jobs:
         # A directory to store and save the cache
         path: ~/.stack
         # An explicit key for restoring and saving the cache
-        key: ${{runner.os}}-${{github.ref}}-stack-global-${{ hashFiles('stack.yaml.lock') }}
+        key: ${{runner.os}}-${{github.ref}}-stack-global-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}
         # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
         restore-keys: |
+          ${{runner.os}}-${{github.ref}}-stack-global-${{ hashFiles('stack.yaml.lock') }}-
           ${{runner.os}}-master-stack-global-${{ hashFiles('stack.yaml.lock') }}
           ${{runner.os}}-master-stack-global-
 
@@ -172,9 +178,10 @@ jobs:
         # A directory to store and save the cache
         path: ~/.cabal
         # An explicit key for restoring and saving the cache
-        key: ${{runner.os}}-${{github.ref}}-cabal-${{ hashFiles('stack.yaml.lock') }}
+        key: ${{runner.os}}-${{github.ref}}-cabal-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}
         # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
         restore-keys: |
+          ${{runner.os}}-${{github.ref}}-cabal-${{ hashFiles('stack.yaml.lock') }}-
           ${{runner.os}}-${{github.ref}}-cabal-${{ hashFiles('stack.yaml.lock') }}
           ${{runner.os}}-master-cabal
 
@@ -196,9 +203,9 @@ jobs:
         # A directory to store and save the cache
         path: .stack-work
         # An explicit key for restoring and saving the cache
-        key: ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}
+        key: ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}
         restore-keys: |
-          ${{runner.os}}-master-stack-work-${{ hashFiles('stack.yaml.lock') }}
+          ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}-
           ${{runner.os}}-${{github.ref}}-stack-work-
           ${{runner.os}}-master-stack-work-
 
@@ -231,9 +238,10 @@ jobs:
         # A directory to store and save the cache
         path: ~/.stack
         # An explicit key for restoring and saving the cache
-        key: ${{runner.os}}-${{github.ref}}-stack-global-${{ hashFiles('stack.yaml.lock') }}
+        key: ${{runner.os}}-${{github.ref}}-stack-global-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}
         # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
         restore-keys: |
+          ${{runner.os}}-${{github.ref}}-stack-global-${{ hashFiles('stack.yaml.lock') }}-
           ${{runner.os}}-master-stack-global-${{ hashFiles('stack.yaml.lock') }}
           ${{runner.os}}-master-stack-global-
 
@@ -243,9 +251,10 @@ jobs:
         # A directory to store and save the cache
         path: ~/.cabal
         # An explicit key for restoring and saving the cache
-        key: ${{runner.os}}-${{github.ref}}-cabal-${{ hashFiles('stack.yaml.lock') }}
+        key: ${{runner.os}}-${{github.ref}}-cabal-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}
         # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
         restore-keys: |
+          ${{runner.os}}-${{github.ref}}-cabal-${{ hashFiles('stack.yaml.lock') }}-
           ${{runner.os}}-${{github.ref}}-cabal-${{ hashFiles('stack.yaml.lock') }}
           ${{runner.os}}-master-cabal
 
@@ -267,9 +276,9 @@ jobs:
         # A directory to store and save the cache
         path: .stack-work
         # An explicit key for restoring and saving the cache
-        key: ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}
+        key: ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}
         restore-keys: |
-          ${{runner.os}}-master-stack-work-${{ hashFiles('stack.yaml.lock') }}
+          ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}-
           ${{runner.os}}-${{github.ref}}-stack-work-
           ${{runner.os}}-master-stack-work-
 
