--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -90,9 +90,10 @@ jobs:
         # A directory to store and save the cache
         path: ~/.stack
         # An explicit key for restoring and saving the cache
-        key: ${{runner.os}}-${{github.ref}}-stack-global-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}
+        key: ${{runner.os}}-${{github.ref}}-stack-global-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}-build
         # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
         restore-keys: |
+          ${{runner.os}}-${{github.ref}}-stack-global-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}
           ${{runner.os}}-${{github.ref}}-stack-global-${{ hashFiles('stack.yaml.lock') }}-
           ${{runner.os}}-master-stack-global-${{ hashFiles('stack.yaml.lock') }}
           ${{runner.os}}-master-stack-global-
@@ -128,8 +129,9 @@ jobs:
         # A directory to store and save the cache
         path: .stack-work
         # An explicit key for restoring and saving the cache
-        key: ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}
+        key: ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}-build
         restore-keys: |
+          ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}
           ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}-
           ${{runner.os}}-${{github.ref}}-stack-work-
           ${{runner.os}}-master-stack-work-
@@ -165,9 +167,10 @@ jobs:
         # A directory to store and save the cache
         path: ~/.stack
         # An explicit key for restoring and saving the cache
-        key: ${{runner.os}}-${{github.ref}}-stack-global-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}
+        key: ${{runner.os}}-${{github.ref}}-stack-global-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}-build
         # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
         restore-keys: |
+          ${{runner.os}}-${{github.ref}}-stack-global-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}
           ${{runner.os}}-${{github.ref}}-stack-global-${{ hashFiles('stack.yaml.lock') }}-
           ${{runner.os}}-master-stack-global-${{ hashFiles('stack.yaml.lock') }}
           ${{runner.os}}-master-stack-global-
@@ -203,8 +206,9 @@ jobs:
         # A directory to store and save the cache
         path: .stack-work
         # An explicit key for restoring and saving the cache
-        key: ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}
+        key: ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}-build
         restore-keys: |
+          ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}
           ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}-
           ${{runner.os}}-${{github.ref}}-stack-work-
           ${{runner.os}}-master-stack-work-
@@ -238,9 +242,10 @@ jobs:
         # A directory to store and save the cache
         path: ~/.stack
         # An explicit key for restoring and saving the cache
-        key: ${{runner.os}}-${{github.ref}}-stack-global-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}
+        key: ${{runner.os}}-${{github.ref}}-stack-global-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}-build
         # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
         restore-keys: |
+          ${{runner.os}}-${{github.ref}}-stack-global-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}
           ${{runner.os}}-${{github.ref}}-stack-global-${{ hashFiles('stack.yaml.lock') }}-
           ${{runner.os}}-master-stack-global-${{ hashFiles('stack.yaml.lock') }}
           ${{runner.os}}-master-stack-global-
@@ -276,8 +281,9 @@ jobs:
         # A directory to store and save the cache
         path: .stack-work
         # An explicit key for restoring and saving the cache
-        key: ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}
+        key: ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}-build
         restore-keys: |
+          ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}-${{ github.sha }}
           ${{runner.os}}-${{github.ref}}-stack-work-${{ hashFiles('stack.yaml.lock') }}-
           ${{runner.os}}-${{github.ref}}-stack-work-
           ${{runner.os}}-master-stack-work-
