--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-15.15
+resolver: nightly-2021-01-15
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -35,9 +35,8 @@ packages:
 # forks / in-progress versions pinned to a git hash. For example:
 #
 extra-deps:
-  - equational-reasoning-0.6.0.1
   - github: konn/computational-algebra
-    commit: b28cc49c26657353eb0638649fb9cce65b76f4fc
+    commit: 98481cb424a717ca89aff0d12494957ffcd4fd92
     subdirs:
       - algebraic-prelude
       - halg-core
@@ -48,6 +47,7 @@ extra-deps:
   - algebra-4.3.1@rev:2
   - control-monad-loop-0.1
   - unamb-0.2.7
-  - repa-3.4.1.4
+  - repa-3.4.1.4@rev:7
+  - process-extras-0.7.4
   - github: konn/factorials
     commit: f4ae86d3ff241258d08663f77b550c945bb65497
