--- a/stack.yaml
+++ b/stack.yaml
@@ -36,7 +36,7 @@ packages:
 #
 extra-deps:
   - github: konn/computational-algebra
-    commit: 98481cb424a717ca89aff0d12494957ffcd4fd92
+    commit: 4a04c6db48aa22e337e4e3c9845a0c522061d264
     subdirs:
       - algebraic-prelude
       - halg-core
@@ -45,6 +45,10 @@ extra-deps:
       - halg-matrices
       - halg-algorithms
   - algebra-4.3.1@rev:2
+  - ghc-typelits-presburger-0.4.0.0
+  - singletons-presburger-0.4.0.0
+  - type-natural-0.9.0.0@rev:1
+  - sized-0.9.0.0@rev:1
   - control-monad-loop-0.1
   - unamb-0.2.7
   - repa-3.4.1.4@rev:7
