--- a/package.yaml
+++ b/package.yaml
@@ -135,6 +135,21 @@ benchmarks:
     - ad
     - smooth
     - gauge
+  multdiffupto-heap:
+    main: multdiffupto-heap.hs
+    source-dirs: bench
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    - -O2
+
+    dependencies:
+    - ad
+    - smooth
+    - directory
+    - filepath
+    - weigh
   liftWeil-speed:
     main: liftWeil-speed.hs
     source-dirs: bench
