--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -62,7 +62,8 @@ jobs:
     - name: Install Dependent Libraries
       run: |
         sudo apt-get update -y -qq
-        sudo apt-get install -y -qq wget libgmp3-dev libgsl0-dev liblapack-dev llvm-7-dev
+        echo "deb http://apt.llvm.org/focal llvm-toolchain-focal-9 main" | sudo tee -a /etc/apt/sources.list.d/llvm.list
+        sudo apt-get install -y -qq wget libgmp3-dev libgsl0-dev liblapack-dev clang-9 llvm-9 llvm-9-dev libllvm9
     - name: Install dependencies
       run: |
         pwd
