--- a/stack.yaml
+++ b/stack.yaml
@@ -30,6 +30,7 @@ resolver: lts-17.4
 #   - wai
 packages:
   - .
+  - symbolic
 # Dependency packages to be pulled from upstream that are not in the resolver.
 # These entries can reference officially published versions as well as
 # forks / in-progress versions pinned to a git hash. For example:
