--- a/stack.yaml
+++ b/stack.yaml
@@ -54,5 +54,6 @@ extra-deps:
   - unamb-0.2.7
   - repa-3.4.1.4@rev:7
   - process-extras-0.7.4
+  - ihaskell-blaze-0.3.0.1
   - github: konn/factorials
     commit: f4ae86d3ff241258d08663f77b550c945bb65497
