--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -300,6 +300,8 @@ jobs:
         stack bench smooth:bench:diffupto-bench --ba "--csv=bench-results/diffupto.csv"
         stack bench smooth:bench:multdiffupto-bench --ba "--csv=bench-results/multdiffupto-speed.csv"
         stack bench smooth:bench:multdiffupto-heap
+        stack bench smooth:bench:higher-diff-speed --ba "--csv=bench-results/higher-diff-speed.csv"
+        stack bench smooth:bench:higher-diff-heap
 
     - name: Upload benchmark results
       uses: actions/upload-artifact@v2.2.1
