--- a/package.yaml
+++ b/package.yaml
@@ -176,3 +176,29 @@ benchmarks:
     - directory
     - filepath
     - weigh
+
+  higher-diff-speed:
+    main: higher-diff-speed.hs
+    source-dirs: bench
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    - -O2
+    dependencies:
+    - smooth
+    - gauge
+
+  higher-diff-heap:
+    main: higher-diff-heap.hs
+    source-dirs: bench
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    - -O2
+    dependencies:
+    - smooth
+    - directory
+    - filepath
+    - weigh
